--- a/Lesson_2/000_Hello_Endpoints/src/main/webapp/index.html
+++ b/Lesson_2/000_Hello_Endpoints/src/main/webapp/index.html
@@ -22,6 +22,11 @@
 
 <P><input id="input_greet_by_name" type="button" value="please wait" 
   onclick="will_be_set_after_endpoints_apis_loaded"></P>
+
+<P>What period it is?<input value="Afternoon" id="period_field"/></P>
+
+<P><input id="input_greet_by_period" type="button" value="please wait"
+          onclick="will_be_set_after_endpoints_apis_loaded"></P>
   
 </body>
 
